<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="souleima.saviour.LoginActivity"
    android:background="@drawable/loginback">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogo"
        android:textSize="50sp"
        android:fontFamily="cursive"
        android:textColor="@color/loginButton"
        android:textAlignment="center"
        android:paddingTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etRegisterMail"
            android:hint="@string/stRegisterMailHint"
            android:drawableLeft="@drawable/envelope"
            android:drawablePadding="40dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:background="@color/editTextLoginBackground"
            android:textColorLink="?attr/actionMenuTextColor"
            android:textColorHighlight="@android:color/background_dark"
            android:freezesText="true"
            android:layout_above="@+id/etLoginPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegisterPassword"
            android:hint="@string/stRegisterPasswordHint"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="40dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:background="@color/editTextLoginBackground"
            android:textColorLink="?attr/actionMenuTextColor"
            android:textColorHighlight="@android:color/background_dark"
            android:freezesText="true"
            android:layout_above="@+id/etLoginPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegisterConfirmationPassword"
            android:hint="@string/stRegisterConfirmationPasswordHint"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="40dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:background="@color/editTextLoginBackground"
            android:textColorLink="?attr/actionMenuTextColor"
            android:textColorHighlight="@android:color/background_dark"
            android:freezesText="true"
            android:layout_above="@+id/etLoginPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btRegister"
            android:text="@string/stRegister"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/loginButton"
            android:textSize="15sp"
            android:fontFamily="casual"
            android:textColor="@android:color/background_dark"
            android:textStyle="normal|bold"
            android:textColorLink="?attr/actionMenuTextColor"
            android:layout_above="@+id/btLoginForgotPassword"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>
